[package]
name = "netstack"
version = "0.1.0"
edition = "2021"
authors = [
    "Anhad Singh <andypython@protonmail.com",
    "pitust <piotr@stelmaszek.com>",
]

[dependencies]
bit_field = "0.10.2"
bitflags = "2.4.0"
byte_endian = { git = "https://github.com/aero-os/byte_endian" }
static_assertions = "1.1.0"

[dev-dependencies]
trybuild = "1.0"
