[package]
name = "crabnet_tcp"
version = "0.1.0"
edition = "2021"

[features]
std = ["env_logger", "tun-tap"]
default = ["std"]

[dependencies]
env_logger = { version = "0.10.0", optional = true }
tun-tap = { version = "0.1.4", default-features = false, optional = true }

log = "0.4.20"
crabnet = { path = "../" }

[dev-dependencies]
pcap-file = "2.0.0"
